--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "module": "dist/index.esm.js",
   "scripts": {
     "build": "rollup -c ",
-    "test": "jest --watch "
+    "test": "jest --coverage",
+    "ci": "npm run build && npm run test",
+    "release": "standard-version"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,7 @@
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
     "rollup-plugin-dts": "^6.1.1",
+    "standard-version": "^9.5.0",
     "ts-jest": "^29.2.5"
   },
   "dependencies": {
