--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "jest-environment-jsdom": "^29.7.0",
+    "react": "^18.3.1",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2"
   }
