disabling few test units

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
     "jsx": "react",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./@types"
+    ]
   },
   "include": [
     "src"
