--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,8 +36,8 @@ jobs:
 
     - name: Commit changelog and version bump
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --global user.name 'Eslam.Dev'
+        git config --global user.email 'e.eslam3bed@gmail.com'
         git add .
         git commit -m "chore(release): $(node -p -e "require('./package.json').version") [skip ci]"
         git tag v$(node -p -e "require('./package.json').version")
