adding the tag name from the steps referance assinged in th prev steps

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -87,5 +87,6 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: dist/*
+        tag_name: ${{ steps.tag.outputs.tag }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
