--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-
+    - name: Setup Node.js 20
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
+        registry-url: "https://registry.npmjs.org"
+        
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Tag the repository
       id: tag
@@ -28,6 +33,7 @@ jobs:
 
     - name: Publish to npm
       run: npm publish
+      
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
